# MLOps-Group-8

./: .dockerignore  .env.example  .gitignore  Copy of FiinProX_DE_Du_lieu_vi_mo_20260406.xlsx  Dockerfile  Dockerfile.model  Makefile  README.md  [MAIN] Market Breadth.ipynb  docker-compose.yml  inp_outp.docx  mlflow.db  pyproject.toml  repo_struction.docx  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  mlops_pipeline.yml
artifacts/drift_reports/: powerbi_drift_summary.csv
artifacts/models/: model_bundle.pkl  model_registry.json  train_metadata.json
artifacts/predictions/: sample_predictions.csv
artifacts/reports/: best_hyperparameters.json  calibration_report.json  eval_test_final.json  eval_train.json  eval_valid.json  eval_valid_final.json  fairness_report.csv  fairness_summary.json  feature_importance.csv  feature_importance_rf.csv  final_model_comparison.csv  final_model_selection.json  model_ranking.csv  model_ranking.md  powerbi_input_quality.csv  powerbi_model_performance.csv  (+4 more)
configs/: base.yaml  data.yaml  deploy.yaml  evaluate.yaml  features.yaml  monitor.yaml  retrain.yaml  train.yaml
docs/: api_spec.md  architecture.md  git_workflow.md  model_card.md  monitoring_plan.md  risk_policy.md  runbook.md  windows-setup.md
features/: build_features.py  encoders.py  imputers.py  selectors.py
notebooks/: 01_eda.ipynb  02_feature_analysis.ipynb  03_model_experiments.ipynb  04_error_analysis.ipynb  data_preparation.ipynb  eda.ipynb
pipelines/: training_pipeline.py
scripts/: _patch_notebooks.py  generate_traffic.py
src/risk/: psi.py  (+4 more)
(+79 files in other folders)
